Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
G
GLib
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 933
    • Issues 933
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 57
    • Merge Requests 57
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • GLib
  • Issues
  • #2284

Closed
Open
Opened Jan 05, 2021 by crvi@crviContributor

gio - g_action_group_activate_action() doesn't flush dbus connection

  • version: 2.66.4
  • os: debian unstable

I am facing issues when g_action_group_activate_action() is immediately followed by an exit() call. This is a remote process action activation. The client process exits before the d-bus request gets out, so the remote activation never happens. This issue happens 100% in a single core / uniprocessor ( e.g. virtualbox with 1 processor ). When I increase the CPU core by 1, the failure percent drops significantly.

Steps to reproduce:

  1. Have a VM with 1 processor.
  2. Start rhythmbox.
  3. Run rhythmbox-client --quit --debug in a terminal.

Expected: Rhythmbox should exit

Actual: Rhythmbox will stay open

Workaround:

Adding delay of 1 second before the exit() call seems to contain the issue, though it's not the right fix.

Client code:

https://gitlab.gnome.org/GNOME/rhythmbox/-/blob/master/remote/dbus/rb-client.c#L1167

Edited Jan 05, 2021 by crvi
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/glib#2284