docs: update g_action_group_activate_action() remote activation semantics

Refer https://gitlab.gnome.org/GNOME/glib/-/issues/2284